--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,8 @@ line-length = 88
 target-version = ['py310']
 
 [tool.isort]
-profile = "black"
+py_version=310
+known_third_party = ["diffusers"]
 
 [mypy]
 python_version = "3.10"
