--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ target-version = ['py310']
 
 [tool.isort]
 py_version=310
-known_third_party = ["diffusers"]
+known_third_party = ["PIL", "diffusers", "numpy", "torch"]
 
 [mypy]
 python_version = "3.10"
